force-app/main/default/objects/JT_LDV_Checkpoint__c/JT_LDV_Checkpoint__c.object-meta.xml
<CustomObject>
    <description
  >Durable checkpoint/job-state for bounded, resumable Large-Data-Volume (LDV) cursor processing. Never expose via public API or LWC — restricted to the JT Dynamic Queries admin permission set.</description>
    <label>LDV Checkpoint</label>
    <nameField>
        <displayFormat>LDV-{00000}</displayFormat>
        <label>Checkpoint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LDV Checkpoints</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>