force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_BindingsJson__c.field-meta.xml
<CustomField>
    <fullName>JT_BindingsJson__c</fullName>
    <description
  >Serialized bind map needed to resume the cursor. Deliberately not Shield-encrypted - access is restricted via this object's Private OWD and admin-only FLS instead. Never log or expose via LWC/public API.</description>
    <label>Bindings JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>