force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_ChunkSize__c.field-meta.xml
<CustomField>
    <fullName>JT_ChunkSize__c</fullName>
    <description
  >Bounded Cursor.fetch() size used for this operation.</description>
    <label>Chunk Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>