force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_CompletedAt__c.field-meta.xml
<CustomField>
    <fullName>JT_CompletedAt__c</fullName>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>