force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_ConfigDevName__c.field-meta.xml
<CustomField>
    <fullName>JT_ConfigDevName__c</fullName>
    <description>JT_DynamicQueryConfiguration__mdt.DeveloperName being executed by this operation.</description>
    <label>Config Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>