force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_CursorPosition__c.field-meta.xml
<CustomField>
    <fullName>JT_CursorPosition__c</fullName>
    <description>Next Cursor.fetch(position, size) offset for this operation.</description>
    <label>Cursor Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>