force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_InitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>JT_InitiatedBy__c</fullName>
    <description>User Id of the user who initiated this LDV operation.</description>
    <label>Initiated By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>