force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_LastCheckpointAt__c.field-meta.xml
<CustomField>
    <fullName>JT_LastCheckpointAt__c</fullName>
    <label>Last Checkpoint At</label>
    <type>DateTime</type>
</CustomField>