force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_LastError__c.field-meta.xml
<CustomField>
    <fullName>JT_LastError__c</fullName>
    <description
  >Error type and message only for the last failure - must never contain bind/query values.</description>
    <label>Last Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>