force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>JT_MaxRetries__c</fullName>
    <defaultValue>3</defaultValue>
    <description
  >Bound for transient-retry/backoff attempts before this operation fails closed.</description>
    <label>Max Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>