force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_OperationId__c.field-meta.xml
<CustomField>
    <fullName>JT_OperationId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >Idempotency key for the whole LDV operation. Retried or duplicated chunk enqueues for the same operation resolve to this same checkpoint row via upsert.</description>
    <externalId>true</externalId>
    <label>Operation Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>