force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_ProcessorClass__c.field-meta.xml
<CustomField>
    <fullName>JT_ProcessorClass__c</fullName>
    <description
  >Fully-qualified JT_DataSelector.CursorProcessor implementation type name, persisted so a chained Queueable chunk can re-instantiate it (instances aren't serializable across transactions).</description>
    <label>Processor Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>