force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_QueueableJobId__c.field-meta.xml
<CustomField>
    <fullName>JT_QueueableJobId__c</fullName>
    <description>Last enqueued AsyncApexJob Id for this operation, for observability.</description>
    <label>Queueable Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>