force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_RecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>JT_RecordsProcessed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cumulative records processed by this operation so far.</description>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>