force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_RetryCount__c.field-meta.xml
<CustomField>
    <fullName>JT_RetryCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Current transient-retry attempt count for this operation.</description>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>