force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_StartedAt__c.field-meta.xml
<CustomField>
    <fullName>JT_StartedAt__c</fullName>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>