force-app/main/default/objects/JT_LDV_Checkpoint__c/fields/JT_TotalRecordCount__c.field-meta.xml
<CustomField>
    <fullName>JT_TotalRecordCount__c</fullName>
    <description
  >Total matching record count from the workload contract's count/risk evidence, if available.</description>
    <label>Total Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>